--- a/sites/all/themes/smallwoodnickle/less/content.less
+++ b/sites/all/themes/smallwoodnickle/less/content.less
@@ -847,6 +847,7 @@
           position: absolute;
           top: 0;
           right: 25%;
+          padding-top: 0;
 
             li {
               line-height: 1.5;
